<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/weather_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_image"
        app:layout_constraintEnd_toEndOf="@+id/weather_image"
        app:layout_constraintStart_toEndOf="@+id/weather_image" />

    <TextView
        android:id="@+id/weather_clouds_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clouds"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/weather_image"
        app:layout_constraintTop_toBottomOf="@+id/weather_image" />

    <TextView
        android:id="@+id/weather_pressure_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/weather_clouds_txt"
        app:layout_constraintTop_toBottomOf="@+id/weather_clouds_txt" />

    <TextView
        android:id="@+id/weather_humidity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/weather_pressure_txt"
        app:layout_constraintTop_toBottomOf="@+id/weather_pressure_txt" />

    <TextView
        android:id="@+id/weather_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_clouds_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_clouds_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_clouds_txt" />

    <TextView
        android:id="@+id/weather_wind_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/weather_humidity_txt"
        app:layout_constraintTop_toBottomOf="@+id/weather_humidity_txt" />

    <TextView
        android:id="@+id/weather_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_pressure_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_pressure_txt" />

    <TextView
        android:id="@+id/weather_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_humidity_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_humidity_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_humidity_txt" />

    <TextView
        android:id="@+id/weather_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_wind_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_wind_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_wind_txt" />

    <ImageView
        android:id="@+id/image_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_refresh_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>