<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="2017-02-16 12:00:00"
        app:layout_constraintBottom_toBottomOf="@+id/weather_wind_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/weather_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="1000hPa"
        app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_pressure_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_pressure_txt" />

    <TextView
        android:id="@+id/weather_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="40%"
        app:layout_constraintBottom_toBottomOf="@+id/weather_clouds_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_clouds_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_clouds_txt" />

    <TextView
        android:id="@+id/weather_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="3,46m/s"
        app:layout_constraintBottom_toBottomOf="@+id/weather_wind_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_wind_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_wind_txt" />

    <TextView
        android:id="@+id/weather_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="20°C"
        app:layout_constraintBottom_toTopOf="@+id/time_tv"
        app:layout_constraintEnd_toEndOf="@+id/time_tv" />

    <TextView
        android:id="@+id/weather_pressure_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/weather_clouds_txt" />

    <TextView
        android:id="@+id/weather_clouds_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clouds"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weather_humidity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/weather_pressure_txt" />

    <TextView
        android:id="@+id/weather_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="49%"
        app:layout_constraintBottom_toBottomOf="@+id/weather_humidity_txt"
        app:layout_constraintStart_toEndOf="@+id/weather_humidity_txt"
        app:layout_constraintTop_toTopOf="@+id/weather_humidity_txt" />

    <TextView
        android:id="@+id/weather_wind_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/weather_humidity_txt" />

    <ImageView
        android:id="@+id/image_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/time_tv"
        app:layout_constraintEnd_toStartOf="@+id/weather_pressure_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/clear_night" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="1"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_tv" />

</android.support.constraint.ConstraintLayout>